# text-zip

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py  test_mcp_server.py  test_strategies.py
textzip/: __init__.py  cli.py  mcp_server.py  strategies.py
